fix: Fix compile warning